# Advent-of-Code-2k24

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
day10/include/: day10.hpp
day10/src/: day10.cpp
day11/include/: day11.hpp
day11/src/: day11.cpp
day12/include/: day12.hpp  garden_plot.hpp
day12/src/: day12.cpp
day13/include/: claw_machine.hpp  day13.hpp
day13/src/: day13.cpp
day14/include/: day14.hpp  robot.hpp
day14/src/: day14.cpp
day2/include/: day2.hpp  report.hpp
day2/src/: day2.cpp
day4/include/: day4.hpp
day4/src/: day4.cpp
day5/include/: day5.hpp  job.hpp  jobs.hpp
day5/src/: day5.cpp
day6/include/: day6.hpp  guard.hpp
day6/src/: day6.cpp
day7/include/: day7.hpp  equation.hpp
day7/src/: day7.cpp
day8/include/: day8.hpp
day8/src/: day8.cpp
day9/include/: blocks.hpp  day9.hpp  spans.hpp
day9/src/: day9.cpp
helpers/generator/: generate.py
helpers/generator/templates/include/: day{day_number}.hpp.j2
helpers/generator/templates/src/: day{day_number}.cpp.j2
helpers/include/: day.hpp  grid.hpp  point.hpp
helpers/src/: cli.cpp  tilemap.cpp
include/: day.hpp  day1.hpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  tilemap.hpp
include/day5/: job.hpp  jobs.hpp  rules.hpp
include/helpers/: tilemap.hpp
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  main.cpp
